--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch":"tsc -w",
+    "watch": "tsc -w",
     "dev": "tsc -b && nodemon dist/index.js"
   },
   "keywords": [],
@@ -16,5 +16,8 @@
     "http": "^0.0.1-security",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
